tests/snapshots/compiler_error_fixtures/spread_non_named_adt_e464.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/spread_non_named_adt_e464.flx
== compile ==
failed (compile)
== diagnostics ==
error[E464]: Spread Requires Named-Field Type

Cannot spread a value of type `Int`; spread requires a named-field data type.

  examples/compiler_errors/spread_non_named_adt_e464.flx:8:13
  |
8 |     let x = { ...n, foo: 1 }
  |             ^^^^^^^^^^^^^^^^
== stdout ==
<not executed>
